added yukika passport to projects

--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -21,9 +21,8 @@
 	<main>
 		<h1>projects</h1>
 		<main>
-			<p>(　o=^•ェ•)o　┏━┓ here's some stuff that i am working on outside my site</p>
+			<p>(　o=^•ェ•)o　┏━┓ here's some stuff that i am working on outside of my site</p>
 			<ul>
-				<li><a href="/">doqmeat.com</a> - my personal website and playground. you are on it right now!</li>
 				<li><a href="https://siinamota.doqmeat.com/" target="_blank">siinamota.doqmeat.com</a> - a fansite for composer and vocaloid producer <i>siinamota</i>!</li>
 				<ul>
 					<li>
@@ -31,12 +30,14 @@
 					</li>
 				</ul>
 				<li><a href="/notebook/tutorials/index.html">tutorials and guides</a></li>
-				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates for HTML pages i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
+				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
 				<ul>
 					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
+					<li><b>yukika passport</b> - <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/yukika" target="_blank">github</a></li>
 				</ul>
 			</ul>
-			<h2 style="margin:3px;">misc</h2>
+
+			<h2>learning zone</h2>
 			<p>i will also have in here some pages relating to things i'm learning or for reference.</p>
 			<ul>
 				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS.</li>
