minor changes to index and files

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -68,7 +68,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/october-movies">october movies</a>
 
 			<h3 class="misc"> misc</h3>
-			<a href="/projects">web projects</a>
+			<a href="/projects">projects</a>
 			<a href="/masaaki-yuasa">masaaki yuasa watchlist</a>
 			<a href="safe-spot/index.html">safe spot</a>
 
@@ -143,7 +143,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats" title="click to see more freaks"><img src="collection/cats/!g/smile.jpg" alt="featured cat" width="70%"></a>
+			<a href="/collection/cats" title="click to see more freaks"><img src="collection/cats/!g/smile.jpg" alt="featured cat" width="90%"></a>
 		</div>
 
 
