added a kitty to my pixel cliques box

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -331,9 +331,10 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<div id="pixel" class="comm-box">
 				<a title="kitty friends pixel club" href="https://divergentrays.com/kitty" target="_blank"><img src="/!g/web/cliques/kitty-friends/button.gif" alt="kitty friends button"></a>
 				<br>
-				<img title="by me! - based on the minecraft cat plushie" src="/!g/web/cliques/kitty-friends/doqmeat.png" alt="the mc cat plush but in kitty pixel">
+				<img title="my pixel cat! - based on the minecraft cat plushie" src="/!g/web/cliques/kitty-friends/doqmeat.png" alt="the mc cat plush but in kitty pixel">
 				<a href="https://mikufan3939.neocities.org" target="_blank"><img title="by meek!" src="/!g/web/cliques/kitty-friends/mikucat.png" alt="mikucat"></a>
 				<a href="https://jeith.neocities.org" target="_blank"><img title="by jeith!" src="!g/web/cliques/kitty-friends/jeith.gif" alt="jeithcat"></a>
+				<a title="by lina!" href="https://amalinalai.github.io/precipice/" target="_blank"><img src="!g/web/cliques/kitty-friends/lina.gif" alt="lina's cat"></a>
 			</div>
 
 			<div id="misc" class="comm-box">
