updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -173,6 +173,7 @@
 			<a href="https://soulbox.neocities.org" target="_blank"><img alt="soulbox" src="!g/soulbox.png">
 			</a>
 			<a href="https://hazure03.neocities.org" target="_blank"><img src="!g/hazure03.gif" alt="hazure03"></a>
+			<a href="https://amalinalai.github.io/precipice/"><img src="!g/lina.gif" title="click to visit lina's home!" alt="lina's home!"></a>
 
 		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
