--- a/doqmeat/books/index.html
+++ b/doqmeat/books/index.html
@@ -26,7 +26,8 @@
 		<li>the guy she was interested in wasn't a guy at all -- ?/?</li>
 		<li>bloodborne -- 13 / ???</li>
 		<li>villain -- ?/?</li>
-		<li>my cat is such a weirdo -- 1/3</li>
+		<li>my cat is such a weirdo -- volume 1/3</li>
+		<li>company and private life -- up to date!</li>
 	</ul>
 	<h2>finished</h2>
 	<ul>
@@ -59,6 +60,8 @@
 		<li>ogi's summer break</li>
 	</ul>
 	<footer>
+		<b>last updated: 30.aug.24</b>
+		<br>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
 </body>
