new featured song n album + minor fixes to listening log

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -63,9 +63,22 @@ iframe2
 </td></table>
 </details>
 -->
-		<details open>
+
+<details open><summary>
+	<span class="date">30.aug.24 - ? : ナイトホリック / sunsound collisions</span>
+	</summary>
+	<table><td class="t-left">
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFLW396UztQ?si=4l8mjEgXavcZHkBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	<p>i actually checked this anime out because of its banger opening by a japanese duo called UROMT but like. it just wasn't what i expected it to be <img src="/!g/pix/skull.gif"alt="skull emoji"> either way, this is still super catchy to me and i've been listening to it so much lately.</p>
+	</td><td class="t-right">
+		<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2043909309/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://2mellomakes.bandcamp.com/album/sunsound-collisions">Sunsound Collisions by 2 Mello</a></iframe>
+	<p>very nice lo-fi type beat collection of songs by an artist i really like! i'm usually playing this in the bg while doing something else. either way, despite it Just being a collection of sounds, i still find it very worthwhile to listen to. my favorite song from this album is <i>speak with you</i>!</p>
+	</td></table>
+	</details>
+
+		<details>
 			<summary>
-				<span class="date">27.jul.24 - ? : walls / アダンの風 (adan no kaze)</span>
+				<span class="date">27.jul.24 - 30.aug.24 : walls / アダンの風 (adan no kaze)</span>
 			</summary>
 			<table>
 				<td class="t-left">
