--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,8 +30,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>27.jul.24</b> - updated featured song &amp; album
-				<b>03.jul.24</b> - summer listening log now live!
+				<b>.jul.24</b> - updated featured song &amp; album
 			</marquee>
 		</div>
 
@@ -89,18 +88,17 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>walls</b> by asian glow
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SOo1Ge0lQ-c?si=JYzH734p2HESCJgQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				a beautiful shoegaze song i've been listening to for the past year or two. the cover features a character from one of my favorite anime: kaiba. and there's even a sample of one of her lines in the song. i have rewatched <i>kaiba</i> SO many times that i think if you give me enough time i can tell you what that line of hers is saying.
+				<b>ナイトホリック</b> - UROMT
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FFLW396UztQ?si=4l8mjEgXavcZHkBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			<p>i actually checked this anime out because of its banger opening by a japanese duo called UROMT but like. it just wasn't what i expected it to be <img src="/!g/pix/skull.gif"alt="skull emoji"> either way, this is still super catchy to me and i've been listening to it so much lately.</p>
 			</div>
 			<div class="lp">
-				<b>アダンの風 (adan no kaze)</b> by ichiko aoba
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/j1IqZtAlFf8?si=w3qH74_OYJah7TAi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				i've been playing <b>ichiko aoba</b> songs <u>every night</u> before going to sleep because oh my god.... their voice and the MELODIES they use just feel so comforting.... recently played this album wide awake. it really was an amazing experience. i love the waves and the wind and all those little sounds that are spread throughout this release. it really made me feel like i was there.
+				<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2043909309/size=large/bgcol=ffffff/linkcol=2ebd35/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://2mellomakes.bandcamp.com/album/sunsound-collisions">Sunsound Collisions by 2 Mello</a></iframe>
+			<p>very nice lo-fi type beat collection of songs by an artist i really like! i'm usually playing this in the bg while doing something else. either way, despite it Just being a collection of sounds, i still find it very worthwhile to listen to. my favorite song from this album is <i>speak with you</i></p>
 			</div>
 			<hr>
 
-			<center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html" target="iframe_a">here</a></small></center>
+			<center><small>past featured music can be found <a title="will open on the iframe above!" href="featured.html#" target="iframe_a">here</a></small></center>
 		</div>
 
 		<!-- is he listening-->
