--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -29,8 +29,9 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed as possible in these. <small>that's why there aren't many bc they take a while to write... head empty.</small> these are usually first listens unless stated otherwise. <small>also i have a life now so expect less logs in here :( you'll see more activity @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a></small></p>
+		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed <small>and coherent</small> as possible in these. these are usually first listens unless stated otherwise. you can see more activity @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a> since i'm a bit busier now to do these!</p>
 		<h3>pages</h3>
+		<p>these will open on their own tab!</p>
 		<h4>2024</h4>
 		<a href="2024/summer.html" target="_parent">summer</a>
 		<a href="2024/spring.html" target="_parent">spring</a>
