deleted tv index cus i dont like how the page currently looks! will work on it in a bit

--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -103,8 +103,8 @@
 				<a href="/vgs" target="_parent">video games</a>
 				<br />
 				↳
-				<a href="/tv" target="_parent">TV</a>
-				<br />
+				<a href="/tv" target="_parent">TV</a> <img src="/!g/pix/caution1.gif" />
+				<br>
 				↳
 				<a href="/books" target="_parent">books</a>
 				<img src="/!g/pix/caution1.gif" />
@@ -166,7 +166,6 @@
 				<ul>
 					↳
 					<a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a>
-					<img src="/!g/pix/new1.gif" alt="new page" />
 				</ul>
 				<li><b>archives</b></li>
 				<ul>
