added nintendogs + cats

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -173,6 +173,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv fav finished cat single">
 			<a title="night in the woods" href="nitw/index.html" target="iframe_a"><img src="nitw/cover.jpg" tabindex="0"></a>
 		</div>
+		<div class="filterDiv single sim finished">
+			<a title="nintendogs + cats" href="nintendogs-cats/index.html" target="iframe_a"><img src="nintendogs-cats/cover.jpg" tabindex="0"></a>
+		</div>
 		<div class="filterDiv currently notdone vn single horror">
 			<a title="paranormasight" href="paranormasight/index.html" target="iframe_a"><img src="paranormasight/cover.jpg" tabindex="0"></a>
 		</div>
@@ -203,7 +206,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv cat fav finished single adv">
 			<a title="stray" href="stray/index.html" target="iframe_a"><img src="stray/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="filterDiv notdone single sim currently">
+		<div class="filterDiv single sim finished fav">
 			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" tabindex="0"></a>
 		</div>
 		<div class="filterDiv finished single puzzle">
