--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -53,6 +53,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>30.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a> + added: <a href="nintendogs-cats/index.html">nintendogs + cats</a></li>
 			<li>13.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>24.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a> + added <a href="neko-odyssey/index.html">neko odyssey</a></li>
 			<li>16.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
