--- a/doqmeat/notebook/sitely/info.html
+++ b/doqmeat/notebook/sitely/info.html
@@ -26,23 +26,23 @@
 		<p>if you wanna be nosy the perfect page for you.</p>
 
 		<h2>site</h2>
-		<p>site has been live since 11.apr.23! under <mark>doqmeat.com</mark> since 24.mar.24</p>
-		<li><b>coding editor</b>: <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! <mark>some extentions i recommend:</mark></li>
+		<p>site has been live since 11.apr.23 under <b>doqmeat.neocities.org</b>. under <mark>doqmeat.com</mark> since 24.mar.24</p>
+		<li><b>coding editor</b>: <a href="https://brackets.io" target="_blank">brackets.io</a> is by far my favorite! sometimes use <a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> too. extentions i recommend for brackets:</mark></li>
 		<ul>
-			<li>"Beautify" - makes code pretty and not so messy, organizes it</li>
+			<li>"Beautify" - makes code pretty and not so messy, organizes it.</li>
 			<li>"Alice - Spell Checking" and alongside this "Alice Dictionaries"</li>
 			<li>"Brackets Git"</li>
 			<li>for UI improvements: "custom work"</li>
 		</ul>
-		<li><b>CLI</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a></li>
 		<li><b>hosting</b>: <a href="https://neocities.org" target="_blank">neocities</a></li>
 		<li><b>domain</b>: <a href="https://porkbun.com" target="_blank">porkbun</a></li>
 
 		<h2>software / programs</h2>
+		<li><b>terminal</b>: <a href="https://gitforwindows.org/" target="_blank">git bash</a> (<a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> for custom themes)</li>
 		<h3>image editing</h3>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - for images that look like this! <img title="from villain MV" src="/music/!g/ads/villain2.png" alt="example" width="100%"></li>
 		<li><a href="https://www.clipstudio.net/en/" target="_blank">clip studio paint</a> - anything i've made art / graphic related has been with this program most of the time.</li>
-		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a fork of <i>asesprite. </i>made some pixels with it.</li>
+		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a fork of <i>asesprite.</i> made some pixels with it.</li>
 
 		<h2>my stuff</h2>
 		<li><b>puter</b>: HP envy x360 convertible laptop w/ stylus <small>which is how i draw here!</small> / 16gb ram / intel core i7 + nvidia geforce mx450</li>
