--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<!-- 
+<!--
 coded with love by des!
 -
 homepage v4 started on 01.aug.24 / finished on 09.aug.24
@@ -29,13 +29,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 </head>
 
 <body>
-	<script>
-		NekoType = "black"
-
-	</script>
-	<h1 id=nl>
-		<script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
-	</h1>
 
 	<div id="wrapper">
 		<header id="header">
@@ -46,7 +39,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			</select>
 			<h1>welcome to doqmeat.com</h1>
 		</header>
-
 
 		<nav id="nav" class="box">
 			<h3 class="personal"> personal</h3>
@@ -63,7 +55,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3 class="media"> media logs</h3>
 			<a href="/music">music</a>
 			<a href="/vgs">video games</a>
-			<a title="WIP - remaking this page!" href=""><s>shows</s> <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
+			<a href="/tv">shows</a>
 			<a title="WIP - no CSS" href="/books">books <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
 			<a href="/october-movies">october movies</a>
 
@@ -86,9 +78,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="intro" class="box">
 			<img title="meow" class="mc-cat" alt="minecraft cat plushie" width="33%" align="right">
-			<p>hello! my name is <b>des</b>, and i'm the person behind this site! just like everyone always says, this
-				is my <u>own</u> little corner of the internet. i use this space for just about anything. though i
-				mostly use it as a <b>digital journal, of both my personal life and interests</b>.</p>
+			<p>hello! my name is <b>des</b>, and i'm the person behind this site! just like everyone always says, this is my <u>own</u> little corner of the internet. i use this space for just about anything. though i mostly use it as a <b>digital journal, of both my personal life and interests</b>.</p>
 			<center>
 				<a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-graphics/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a>
 				<img src="/collection/internet-graphics/!g/borntodie.png" width="40%" alt="button that reads 'BORN TO DIE, WORLD IS A FUCK, Kill Em All 1989, This user is a trash man, 410,757,864,530 DEAD COPS'">
@@ -159,8 +149,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>bye bye</h2>
 			<p>i hope you have fun browsing my website :3</p>
 			<p>you can leave a message about your visit (or about anything really! i usually reply) on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an <a href="mailto:doqmeat@gmail.com">e-mail</a> if you'd like! go crazy.</p>
-			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your
-				own server.</p>
+			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your own server.</p>
 			<center>
 				<img src="!g/web/doqmeat.png" alt="button">
 				<img src="!g/web/doqmeat-2.png" alt="button 2">
