--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -22,7 +22,6 @@
 		a:visited {
 			color: darkgray;
 		}
-
 	</style>
 </head>
 
@@ -103,7 +102,7 @@
 				<a href="/vgs" target="_parent">video games</a>
 				<br />
 				↳
-				<a href="/tv" target="_parent">TV</a> <img src="/!g/pix/caution1.gif" />
+				<a href="/tv" target="_parent">TV</a>
 				<br>
 				↳
 				<a href="/books" target="_parent">books</a>
