minor changes to tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -38,7 +38,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/twin-peaks.png" class="cover">
-					<h3>twin peaks</h3>
+					<h3 id="twin peaks">twin peaks</h3>
 					<p>during april 2023 my boyfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
 					<p>i'm gonna get a tiny bit cheesy for a sec but then my boyfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
 					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
@@ -56,7 +56,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/kaiba.png" class="cover">
-					<h3>kaiba</h3>
+					<h3 id="kaiba">kaiba</h3>
 					<p>i decided to watch this one day because i stumbled upon a gif of the opening one day and i just found the art so so so beautiful!</p>
 					<details>
 						<summary>the gif in question</summary><img src="/!g/gif/kaiba.gif" width="80%" alt="gif of the intro of kaiba. has a watercolor style">
@@ -73,7 +73,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/dungeon-meshi.png" class="cover" alt="dungeon meshi poster">
-					<h3>dungeon meshi</h3>
+					<h3 id="meshi">dungeon meshi</h3>
 					<p>so cute and fun.</p>
 					<p>had to watch the last few eps in the eng dub bc my mom wanted to understand what they were saying as she was knitting LOL</p>
 					<p class="status">finished</p>
@@ -83,7 +83,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/utena.png" alt="revolutionary girl utena poster" class="cover">
-					<h3>revolutionary girl utena</h3>
+					<h3 id="utena">revolutionary girl utena</h3>
 					<p>i binged watched this when i got covid but then i got better and forgot about it... SOON i will finish you. found the story very intriguing.</p>
 					<p class="status">eps 27/39</p>
 				</div>
@@ -92,7 +92,7 @@
 			<div class="show">
 				<div class="box">
 					<img src="!g/morel%20orel.png" class="cover" alt="moral orel poster">
-					<h3>moral orel</h3>
+					<h3 id="moral-orel">moral orel</h3>
 					<p>this show was such an emotional ride :')</p>
 					<p>despite the show being mostly like a comedy of the lives of these people,i really do like some of the theme this show tackles and how it explores them. i was often feeling really heavy for these characters, specially orel. i grew up in a Very christian enviroment so some of the things discussed in this <b>really</b> got to me in a way. i get it.</p>
 					<p>which was the reason why my heart was so heavy when i finished watching it. orel i love you so much.</p>
@@ -106,7 +106,7 @@
 		</div>
 
 		<div id="lists">
-			<p>might eventually put these up... i just like doing lists</p>
+			<p>might eventually put these up if i have anything to say abt them... i just like doing lists</p>
 			<details>
 				<summary>finished</summary>
 				<ul>
