--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -149,10 +149,10 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<div class="close"></div>
 					<h2>148 - c418</h2>
 					<p><img src="!g/fav-albums/148.jpg" width="40%" class="r-img">i have always kept up with c418 after being such a fan of the minecraft ost. i think this album of his dropped while i was still in middle school or something like that and MAN.... did it fucking HIT.</p>
-					<p>obv this is pretty different from what i've heard of him in minecraft, but that did not stop me from loving this around that time. and i still do</p>
+					<p>obv this is pretty different from what i've heard of him in minecraft, but that did not stop me from loving this around that time. and i still do.</p>
 					<p>pretty fucking awesome progressive house listen with some drum & bass tunes as well! of course i love this.</p>
-					<p>at the time i listened to this for the first time, the only thing i knew was that i really liked electronic music and my taste wasnt as defined as it is today but wow. relistening this album now and it is just so perfect to my tastes.</p>
-					<p>i used to have <i>habitual crush</i> and <i>friend</i> on repeat in middle school while i was going through something a bit gay. you know how it is</p>
+					<p>at the time i listened to this for the first time, the only thing i knew was that i really liked electronic music and my taste wasnt as defined as it is today but wow. relistening this album now and it is just so perfect to my taste.</p>
+					<p>i used to have <i>habitual crush</i> and <i>friend</i> on repeat in middle school while i was going through something a bit gay. you know how it is.</p>
 
 					<p><b>fav songs:</b> tsuki no koibumi 2 <img src="/!g/pix/staryellow.gif"> habitual crush <img src="/!g/pix/staryellow.gif"> aria economy <img src="/!g/pix/staryellow.gif"> friend <img src="/!g/pix/staryellow.gif"> kompass <img src="/!g/pix/staryellow.gif"> divide by four add seven</p>
 					<p><b>links:</b> <a href="https://c418.bandcamp.com/album/148" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/47rrhji1V9rRBgYIDCWgQJ?si=4Ttgl9nERn-7PuPS4JX9SQ" target="_blank">spotify</a> / <a href="https://youtube.com/playlist?list=OLAK5uy_n8cH2ZfM5FpdhHFDCPeC8xmkQeJd01oWQ&si=6yqaSs-XoqVczKTV" target="_blank">youtube playlist</a></p>
@@ -328,7 +328,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p>so lovely its like im floating</p>
 					<p>also, lovely cover art</p>
 					<p><b>fav songs:</b> 농담 Joke <img src="/!g/pix/staryellow.gif"> paradise <img src="/!g/pix/staryellow.gif"> 2 weeks</p>
-					<p><b>links:</b> <a href="https://aseulmusic.bandcamp.com/album/slow-dance-2" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/5TBt8hVxIdK3WY1DpXz4Do?si=KSnt9xpvRK-308CpYQWHZg" target="_blank">spotify</a> / youtube</p>
+					<p><b>links:</b> <a href="https://aseulmusic.bandcamp.com/album/slow-dance-2" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/5TBt8hVxIdK3WY1DpXz4Do?si=KSnt9xpvRK-308CpYQWHZg" target="_blank">spotify</a> / <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.youtube.com/watch%3Fv%3DY3UpUxciy04&ved=2ahUKEwij8N2ykaOIAxWVD0QIHZm8Cx8QwqsBegQIEhAF&usg=AOvVaw1Adoumdjx1RnYWyJe5Ml95" target="_blank">youtube</a>
 				</div>
 			</div>
 
@@ -609,7 +609,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 		let closeDiv = document.getElementsByClassName("close");
 		for (var i = 0; i < closeDiv.length; i++) {
 			var closeDivClick = closeDiv[i];
-			closeDivClick.onclick = function() {
+			closeDivClick.onclick = function () {
 				var modals = document.getElementsByClassName("modal");
 				for (var i = 0; i < modals.length; i++) {
 					modals[i].style.display = "none";
@@ -663,7 +663,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 		var btnContainer = document.getElementById("myBtnContainer");
 		var btns = btnContainer.getElementsByClassName("tags");
 		for (var i = 0; i < btns.length; i++) {
-			btns[i].addEventListener("click", function() {
+			btns[i].addEventListener("click", function () {
 				var current = document.getElementsByClassName("active");
 				current[0].className = current[0].className.replace(" active", "");
 				this.className += " active";
