minor changes to music page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,7 +30,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>.jul.24</b> - updated featured song &amp; album
+				<b>01.sep.24</b> - updated featured song &amp; album
 			</marquee>
 		</div>
 
@@ -122,17 +122,19 @@
 		</div>
 
 		<div id="fun" class="box">
-			<img src="/collection/internet-graphics/!g/matry.gif">
+			<img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi">
+			<img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku">
+			<br>
 			<a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="/collection/internet-graphics/!g/breakbeat.gif"></a>
 			<a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="/collection/internet-graphics/!g/drippin.gif"></a>
 			<img src="/collection/internet-graphics/!g/miku.gif">
 			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="/collection/internet-graphics/!g/loona.gif"></a>
-			<img src="/collection/internet-graphics/!g/orka.gif">
-			<img src="/collection/internet-graphics/!g/ilovethemusic.gif" style="max-width:100%;">
+			<br>
+			<img src="/collection/internet-graphics/!g/ilovethemusic.gif" style="max-width:100%;" alt="i love the music">
 		</div>
 
 		<footer>
-			last updated on 02.aug.24
+			last updated on 02.sep.24
 			<br>
 
 			<b>credit:</b>
@@ -144,6 +146,7 @@
 		</footer>
 		<!-- wrapper end div -->
 	</div>
+
 	<div id="home">
 		<a title="go back home!" href="/"><img src="/!g/pix/music-note-sozaiya.gif" alt="homepage link"></a>
 	</div>
