minor changes to music page

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,6 +30,8 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
+				<b>02.sep.24</b> - new listening log: <i>TTYL</i>
+				/
 				<b>01.sep.24</b> - updated featured song &amp; album
 			</marquee>
 		</div>
