added some links

--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -37,7 +37,6 @@
 		p.font a {
 			font-weight: normal;
 		}
-
 	</style>
 </head>
 
@@ -326,6 +325,7 @@
 		<li><a href="https://saerasoft.com/caesium" target="_blank">caesium image compressor</a> - online img compressor but it also offers an offline software you can download!</li>
 		<li><a href="https://www.piskelapp.com/" target="_blank">pixel art editor</a> - online / offline</li>
 		<li><a href="https://libresprite.github.io/#!/" target="_blank">libresprite</a> - a free and open source fork of <i>aseprite</i></li>
+		<li><a href="https://fansfansfans.net/codegenerator/" target="_blank">fanlisting banner generator</a></li>
 
 		<hr>
 
@@ -360,6 +360,7 @@
 		<li><a href="https://www.webdesignmuseum.org/" target="_blank">web design museum</a> - shows you various web designs throughout time!</li>
 		<li><a href="https://wiby.me/" target="_blank">wiby.me</a> - search engine that only indexes sites without JS</li>
 		<li><a href="http://theoldnet.com" target="_blank">the old net</a> - navigate the internet during different years</li>
+		<li><a href="https://ihavenotv.com/" target="_blank">ihavenotv</a> - a website that links you documentaries to watch.</li>
 
 		<h3>communities</h3>
 		<li><a href="https://discourse.32bit.cafe/" target="_blank">discourse.32bit.cafe</a> - a nice forum of website hobbyists and professionals</li>
