--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -209,6 +209,9 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		<div class="filterDiv single sim finished fav">
 			<a title="style savvy: trendsetters" href="style-savvy-trendsetters/index.html" target="iframe_a"><img src="style-savvy-trendsetters/cover.JPG" tabindex="0"></a>
 		</div>
+		<div class="filterDiv single sim current notdone">
+			<a title="style savvy: styling star" href="style-savvy-styling-star/index.html" target="iframe_a"><img src="" alt="style savvy styling star" tabindex="0"></a>
+		</div>
 		<div class="filterDiv finished single puzzle">
 			<a title="unpacking" href="unpacking/index.html" target="iframe_a"><img src="unpacking/cover.jpg" tabindex="0"></a>
 		</div>
@@ -311,7 +314,7 @@ how to get an img to recognize the :focus thingy in css: https://stackoverflow.c
 		var btnContainer = document.getElementById("myBtnContainer");
 		var btns = btnContainer.getElementsByClassName("btn");
 		for (var i = 0; i < btns.length; i++) {
-			btns[i].addEventListener("click", function() {
+			btns[i].addEventListener("click", function () {
 				var current = document.getElementsByClassName("active");
 				current[0].className = current[0].className.replace(" active", "");
 				this.className += " active";
