--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -123,14 +123,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p>
-				<span class="hl">playing:</span> style savvy styling star + <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a>
-			</p>
+			<p><span class="hl">playing:</span> style savvy styling star</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> grace and frankie + joe pera talks with you</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> reworking some pages around site!</p>
-			<p class="date">last updated on 30.aug.24</p>
+			<p class="date">last updated on 03.sep.24</p>
 
 		</div>
 
