--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -29,12 +29,12 @@
 		<a href="https://dokode.moe" target="_blank"><img src="/sites/!g/dokode.moe.gif"></a>
 		<a href="https://nyaa.neocities.org" target="_blank"><img src="/sites/!g/nyaa.gif"></a>
 		<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="/sites/!g/gothiclolita.jpg" width="88px"></a>
-		<a href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a>
 		<a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a>
 		<a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
 		<a href="https://faegardens333.neocities.org/" target="_blank"><img src="/sites/!g/faegardens333.gif"></a>
 		<a href="https://pomelo.lol/" target="_blank"><img src="/sites/!g/pomelo.gif"></a>
 		<a href="https://cloverbell.neocities.org/" target="_blank"><img src="/sites/!g/cloverbell.gif"></a>
+		<a href="https://tsukinio.dorothea.us/" target="_blank"><img src="/sites/!g/tsukinio.gif" alt="tsukunio"></a>
 
 		<h2>stuff used in my website</h2>
 
