--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -81,8 +81,8 @@ v3 of journal started on 05.jul.24
 			</div>
 
 			<div id="pic">
-				<h3>piclog</h3>
-				<a title="piclog acc, will open on a new tab!" href="https://piclog.blue/profile.php?id=51" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="100%" style="border-radius: 10px;" alt="piclog"></a>
+				<h3>credit</h3>
+				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, bg n deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
 			</div>
 		</aside>
 
@@ -90,8 +90,7 @@ v3 of journal started on 05.jul.24
 
 		<footer>
 			<p><img src="/!g/pix/butterfly5.gif"> journal running on version 3 since 06.jul.24 <img src="/!g/pix/butterfly5.gif"></p>
-			<p><a href="#">top</a> - <a href="/">home</a> - <a title="food log!" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink">moku.blog</a> - <a href="/microblog">microblog</a> - <a href="/sitemap">sitemap</a></p>
-			<p><b>credit:</b> pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, bg n deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
+			<p><a href="#">top</a> - <a href="/">home</a> - <a title="food log!" href="https://moku.blog/user/doqmeat" target="_blank" class="outlink">moku.blog</a> - <a href="/blog">blog</a> - <a href="/microblog">microblog</a> - <a href="/sitemap">sitemap</a></p>
 		</footer>
 
 	</div>
