minor fixes to fav kpop producers

--- a/doqmeat/music/kpop-producers.html
+++ b/doqmeat/music/kpop-producers.html
@@ -34,7 +34,6 @@
 		li {
 			margin: 10px 0;
 		}
-
 	</style>
 </head>
 
@@ -99,13 +98,13 @@
 		</ul>
 
 		<h2>individual producers</h2>
-
+		<p>not sure if these are teams or individuals tbh. i don't have a lot of info about them!</p>
 		<h3>BADD</h3>
 		<ul>
 			<li>loona - colors</li>
 		</ul>
 
-		<h3>l’emon</h3>
+		<h3>l'emon</h3>
 		<ul>
 			<li>weki meki - metronome</li>
 		</ul>
@@ -118,7 +117,7 @@
 		</ul>
 	</main>
 	<footer>
-		<b>last updated on 12.dec.23</b>
+		<b>last updated on 03.sep.24</b>
 		<br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
