minor fixes + added JP boxart to page

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -39,6 +39,7 @@
 <body>
 	<main>
 		<h2>style savvy trendsetters</h2>
+		<img src="js-boxart.png" width="40%" alt="japanese box art" class="cover">
 		<div class="info"><b>status: </b> finished</div>
 		<div class="info"><b>release date: </b> september 27, 2012</div>
 		<div class="info"><b>developer: </b> syn sophia</div>
@@ -64,7 +65,6 @@
 		</p>
 		<p>here's some of my screenshots:</p>
 		<center>
-			<img src="240830 (7).jpg" alt="screenshots from style savvy trendsetters" width="48%" />
 			<img src="240830 (2).jpg" alt="screenshots from style savvy trendsetters" width="48%" />
 			<img src="240830 (3).jpg" alt="screenshots from style savvy trendsetters" width="48%" />
 			<br>
@@ -85,24 +85,19 @@
 			<img src="240813%20(9).jpg" alt="screenshot from style savvy trendsetter" width="80%" />
 			<img src="240813%20(8).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
 			<img src="240813%20(10).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
-			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter"
-				style="max-width: 100%" /><br />
+			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%" /><br />
 			<img src="240813%20(2).bmp" alt="screenshot from style savvy trendsetter" width="80%" />
 			<img src="240813%20(1).bmp" alt="screenshot from style savvy trendsetter" width="80%" />
-			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter"
-				style="max-width: 100%" /><br />
+			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%" /><br />
 			<img src="240813%20(4).bmp" alt="screenshot from style savvy trendsetter" width="80%" />
 			<img src="240813%20(3).bmp" alt="screenshot from style savvy trendsetter" width="80%" />
 			<img src="240813%20(7).jpg" alt="screenshot from style savvy trendsetter" width="80%" />
-			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter"
-				style="max-width: 100%" /><br />
+			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%" /><br />
 			<img src="240813%20(1).jpg" alt="screenshot from style savvy trendsetter" width="80%" />
-			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter"
-				style="max-width: 100%" /><br />
+			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%" /><br />
 			<img src="240813%20(2).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
 			<img src="240813%20(3).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
-			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter"
-				style="max-width: 100%" /><br />
+			<br /><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%" /><br />
 			<img src="240813%20(4).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
 			<img src="240813%20(5).jpg" alt="screenshot from style savvy trendsetter" width="49%" />
 			<img src="240813%20(6).jpg" alt="screenshot from style savvy trendsetter" width="80%" />
